# cartoon-converter

./: .bandit  .flake8  Dockerfile  LICENSE  Makefile  README.md  app.py  cartoon.py  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml  sync_to_hugging_face.yml
src/: app.py  cartoon.py  utils.py
